# rzv_drp-ai_tvm

./: .gitattributes  .gitmodules  Dockerfile  DockerfileV2H  Gemfile  README.md  compile_sample_model.md  gui_demo.md  gui_demo_v2h.md  gui_demo_v2n.md  guide.md  index.md  pruning.md  version.md
QAT/: README.md
QAT/PyTorch_sample/: qat_retrain.py  train.py
QAT/TensorFlow_sample/: qat_retrain.py  train.py
_layouts/: default.html
_sass/: _bootstrap-icons.scss
_site/: 404.html  pruning.html  robots.txt
apps/: CMakeLists.txt  MeraDrpRuntimeWrapper.cpp  MeraDrpRuntimeWrapper.h  PreRuntime.cpp  PreRuntime.h  PreRuntimeOcv.cpp  PreRuntimeV2H.cpp  README.md  benchmark.cpp  build_appV2H.md  inference.cpp  run_inference_v2h.cpp  transform.h  tutorial_app.cpp  tutorial_app_v2ml.cpp
apps/exe/: sample.yuv
apps/exe/preprocess_tvm_v2l/: drp_param_info.txt  preprocess_tvm_v2l_addrmap_intm.txt  preprocess_tvm_v2l_drpcfg.mem
apps/exe/preprocess_tvm_v2m/: drp_param_info.txt  preprocess_tvm_v2m_addrmap_intm.txt
apps/exe/preprocess_tvm_v2ma/: drp_param_info.txt
apps/include/: mera_runtime.h  rt.h
apps/include/mera2_runtime_plan/: plan.h  plan_io.h
apps/python/: README.md  inference.py  mera-2.5.1-cp38-cp38-linux_aarch64.whl  tvm-0.7.0.dev1602+g7c46cf6dc-cp38-cp38-linux_aarch64.whl
apps/toolchain/: runtime.cmake
assets/css/: style.scss
assets/js/: drm-ai_tvm.js  script.js
convert/: convert_yolo_pt_to_onnx.py  download_facenet_pytorch.py  download_midas_onnx.py  download_mmpose.py  download_monodepth2.py  download_pytorch_timm.py  download_sc_depth_resnet.py  download_swin_onnx.py  download_torchvision.py  download_vit_onnx.py  facenet_to_tflite.py  mm_data.json
docs/: 404.html  About_mera.md  Compile_API.md  Error_List.md  Model_List.md  PreRuntime.md  README.md  Runtime_API.md  Runtime_Wrap.md  _config.yml  compile_sample_model.html  compile_sample_model.md  compile_your_own_model.html  feed.xml  gui_demo.html  gui_demo_v2h.html  gui_demo_v2n.html  history.html  history.md  index.html  index.md  index_old.html  index_old.md  pruning.html  sitemap.xml  version.html
docs/_layouts/: tutorial.html  version.html
docs/_sass/: _variables.scss  jekyll-theme-minimal.scss
docs/_site/: compile_sample_model.html  compile_your_own_model.html  index.html  index_old.html  sitemap.xml  version.html
docs/model_list/: Model_List_V2H.md  Model_List_V2H_v240.md  Model_List_V2L.md  Model_List_V2M.md  Model_List_V2MA.md  how_to_expand_drpai_memory.md
how-to/: README.md
how-to/sample_app/: README.md
how-to/sample_app/src/: CMakeLists.txt  image_converter.cpp  image_converter.h  includes.h  main.cpp  recognize_proc.cpp  recognize_proc.h  ws_server.cpp  ws_server.h
how-to/sample_app/src/camera/: camera.cpp  camera.h  define.h
how-to/sample_app/src/command/: app_message.h  bbox_t.h  camera_image.h  change_model.h  classification.h  classify_t.h  command_base.h  command_create_helper.h  cpu_usage.h  object_detection.h  pose_detection.h  predict_notify_base.h  semantic_segmentation.h
how-to/sample_app/src/include/: LICENCE_lwsock.txt
how-to/sample_app/src/recognize/: irecognize_model.h  recognize_base.cpp  recognize_base.h  recognize_data.h
how-to/sample_app/src/recognize/common/: MeraDrpRuntimeWrapper.cpp  MeraDrpRuntimeWrapper.h  PreRuntime.cpp  PreRuntime.h  box.cpp  box.h  functions.h  object_detection.h  pos.h  recognize_define.h  yolo_common.h
how-to/sample_app/src/recognize/deeplabv3/: tvm_drpai_deeplabv3.cpp  tvm_drpai_deeplabv3.h
how-to/sample_app/src/recognize/deeppose/: tvm_cpu_deeppose.cpp  tvm_cpu_deeppose.h  tvm_drpai_deeppose.cpp  tvm_drpai_deeppose.h
how-to/sample_app/src/recognize/emotionfp/: tvm_drpai_emotionfp.cpp  tvm_drpai_emotionfp.h
how-to/sample_app/src/recognize/googlenet/: tvm_drpai_googlenet.cpp  tvm_drpai_googlenet.h
how-to/sample_app/src/recognize/hrnet/: tvm_drpai_hrnet.cpp  tvm_drpai_hrnet.h
how-to/sample_app/src/recognize/ultraface/: tvm_drpai_ultraface.cpp  tvm_drpai_ultraface.h
how-to/sample_app/src/recognize/yolo/: tvm_drpai_yolo.cpp  tvm_drpai_yolo.h
how-to/sample_app/src/util/: measure_time.h  string_formatter.h  system_analyzer.cpp  system_analyzer.h
how-to/sample_app_usb_cam_http/: README.md
how-to/sample_app_v2h/: README.md
how-to/sample_app_v2h/app_deeplabv3_cam/src/: CMakeLists.txt  define.h  define_color_deeplabv3.h  image_deeplabv3.cpp  image_deeplabv3.h  main_deeplabv3.cpp
how-to/sample_app_v2h/app_resnet50_cam/src/: CMakeLists.txt  define.h  image_resnet50.cpp  image_resnet50.h  main_resnet50.cpp
how-to/sample_app_v2h/app_topformer_cam/src/: CMakeLists.txt  class_info.cpp  class_info.h  define.h  image_topformer.cpp  image_topformer.h  main_topformer.cpp
how-to/sample_app_v2h/app_topformer_cam/src/mmsegmentation/: class_names.cpp
how-to/sample_app_v2h/src/: CMakeLists.txt  ascii.cpp  ascii.h  box.cpp  box.h  define_color.h  image.cpp  image.h  main.cpp  wayland.cpp  wayland.h
how-to/sample_app_v2h/src/camera/: camera.cpp  camera.h  define.h
how-to/tips/: how-to-read-log.md
how-to/tips/compare_difference/apps/: CMakeLists.txt  inference_comparison.cpp
pruning/: README.md
pruning/how-to/: README.md
pruning/setup/: README.md
setup/: README.md  SetupV2H.md  initial_setup.sh  make_drp_env.sh
setup/include/: c_runtime_api.h  device_api.h  ndarray.h  packed_func.h
tutorials/: README.md  arg_parser.py  arm_only_deploy.py  compile_cpu_only_onnx_model.py  compile_exir_model.py  compile_exir_model_quant.py  compile_onnx_model.py  compile_onnx_model_quant.py  compile_pytorch_model.py  compile_pytorch_model_quant.py  compile_tflite_model.py  compile_tflite_model_quant.py  run_drp_compiler.sh  run_drp_quant_compiler.sh  run_quantization_onnx.sh  sample_save_tflite_model.py  sample_save_torch_model.py  simple.py  test_pattern_table_model.py  test_pattern_table_operator.py  tutorial_RZV2H.md
tutorials/docker/: Dockerfile
tutorials/drpai_preprocess/: __init__.py  drpai_param.py  op.py  preruntime.py
tutorials/exclude_operator/: exclude_operator.csv
tutorials/helper/: create_simple_onnx.py
(+240 files in other folders)
